--- a/templates/evaluacion.html
+++ b/templates/evaluacion.html
@@ -43,7 +43,7 @@
 
         <section class="evaluation-form-container">
             <h2>Completa tu evaluación</h2>
-            <form class="evaluation-form" action="#" method="post">
+            <form class="evaluation-form" action="/procesar_evaluacion" method="post">
                 <div class="employee-info">
                     <h3>Información del empleado</h3>
                     <div class="form-row">
